--- a/src/components/userRegistration.html
+++ b/src/components/userRegistration.html
@@ -2,7 +2,7 @@
 	<form>
 		<div class="row justify-content-md-center">
 			<div class="col-auto">
-				<label class="col-form-label">First Name: </label>
+				<label class="col-form-label">First Name</label>
 			</div>
 			<div class="col-auto">
 				<input type="text" class="form-control" ng-model="user.firstName">
@@ -10,15 +10,15 @@
 		</div>
 		<div class="row justify-content-md-center">
 			<div class="col-auto">
-				<label class="col-form-label">Last Name:</label>
+				<label class="col-form-label">Last Name</label>
 			</div>
-			<div class="col-auto">	
+			<div class="col-auto">
 				<input type="text" class="form-control" ng-model="user.lastName">
 			</div>
 		</div>
 		<div class="row justify-content-md-center">
 			<div class="col-auto">
-				<label class="col-form-label">Phone No.:</label>
+				<label class="col-form-label">Phone No.</label>
 			</div>
 			<div class="col-auto">
 				<input type="text" class="form-control" ng-model="user.phoneNo">
@@ -26,3 +26,14 @@
 		</div>
 	</form>
 </div>
+
+<style>
+	.userRegistration .row {
+		padding: 0.5rem;
+		background-color: white;
+	}
+
+	.col-form-label {
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+	}
+</style>
